--- a/FinanceAPP/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/FinanceAPP/Resources/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +17,45 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lun-4F-d8s">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="bNC-sL-2UN">
+                                        <rect key="frame" x="86" y="312" width="203" height="42"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="203" id="4uP-jl-jhi"/>
+                                            <constraint firstAttribute="height" constant="42" id="9An-bl-jUw"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" name="main"/>
+                                <constraints>
+                                    <constraint firstItem="bNC-sL-2UN" firstAttribute="centerY" secondItem="Lun-4F-d8s" secondAttribute="centerY" id="CF5-OT-Y6c"/>
+                                    <constraint firstItem="bNC-sL-2UN" firstAttribute="centerX" secondItem="Lun-4F-d8s" secondAttribute="centerX" id="MPv-ms-Ifo"/>
+                                    <constraint firstItem="bNC-sL-2UN" firstAttribute="centerY" secondItem="Lun-4F-d8s" secondAttribute="centerY" id="tcu-a1-daq"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Lun-4F-d8s" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="25b-LA-0aT"/>
+                            <constraint firstItem="Lun-4F-d8s" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="5dT-LA-ZQR"/>
+                            <constraint firstAttribute="trailing" secondItem="Lun-4F-d8s" secondAttribute="trailing" id="Ekj-SG-fLn"/>
+                            <constraint firstItem="Lun-4F-d8s" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Feu-J9-Ahl"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="splash" width="282" height="42"/>
+        <namedColor name="main">
+            <color red="0.2199999988079071" green="0.2199999988079071" blue="0.2199999988079071" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
