--- a/FinanceAPP/Views/Base.lproj/Main.storyboard
+++ b/FinanceAPP/Views/Base.lproj/Main.storyboard
@@ -245,16 +245,44 @@
                                     <outlet property="delegate" destination="0KY-FI-Aay" id="Vsq-1k-PJc"/>
                                 </connections>
                             </tableView>
+                            <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kjy-im-f2y">
+                                <rect key="frame" x="-0.5" y="364" width="375" height="210"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bill-table" translatesAutoresizingMaskIntoConstraints="NO" id="wdI-Ru-341">
+                                        <rect key="frame" x="123" y="11" width="128" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="wdI-Ru-341" secondAttribute="height" multiplier="1:1" id="h62-jN-ALw"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No invoices added" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="crp-Ji-Xs0">
+                                        <rect key="frame" x="115" y="149" width="146" height="23.5"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <color key="textColor" red="0.33330118656158447" green="0.33335390686988831" blue="0.33328968286514282" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="crp-Ji-Xs0" firstAttribute="top" secondItem="wdI-Ru-341" secondAttribute="bottom" constant="10" id="AOS-L3-1NN"/>
+                                    <constraint firstItem="wdI-Ru-341" firstAttribute="centerY" secondItem="kjy-im-f2y" secondAttribute="centerY" constant="-30" id="BFr-sq-BTp"/>
+                                    <constraint firstItem="wdI-Ru-341" firstAttribute="centerX" secondItem="kjy-im-f2y" secondAttribute="centerX" id="Tuv-kk-g5Q"/>
+                                    <constraint firstItem="crp-Ji-Xs0" firstAttribute="centerX" secondItem="kjy-im-f2y" secondAttribute="centerX" id="akc-PF-tnh"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" name="main"/>
                         <constraints>
+                            <constraint firstItem="kjy-im-f2y" firstAttribute="height" secondItem="nNC-W5-iGT" secondAttribute="height" id="1YC-bB-6AY"/>
                             <constraint firstItem="nNC-W5-iGT" firstAttribute="bottom" secondItem="crb-lF-eSQ" secondAttribute="bottom" id="9Bk-uc-fyh"/>
                             <constraint firstItem="nNC-W5-iGT" firstAttribute="trailing" secondItem="crb-lF-eSQ" secondAttribute="trailing" id="CLA-IK-82p"/>
+                            <constraint firstItem="kjy-im-f2y" firstAttribute="width" secondItem="nNC-W5-iGT" secondAttribute="width" id="RKF-ud-OtW"/>
+                            <constraint firstItem="kjy-im-f2y" firstAttribute="centerY" secondItem="nNC-W5-iGT" secondAttribute="centerY" id="cq6-dc-v5R"/>
                             <constraint firstItem="nNC-W5-iGT" firstAttribute="leading" secondItem="crb-lF-eSQ" secondAttribute="leading" id="eEp-sz-Wmb"/>
                             <constraint firstItem="Rsi-Ya-vuu" firstAttribute="trailing" secondItem="crb-lF-eSQ" secondAttribute="trailing" id="jXU-Km-Gdc"/>
                             <constraint firstItem="nNC-W5-iGT" firstAttribute="top" secondItem="lFS-U2-NVl" secondAttribute="topMargin" constant="300" id="s25-5n-Tjr"/>
                             <constraint firstItem="Rsi-Ya-vuu" firstAttribute="leading" secondItem="crb-lF-eSQ" secondAttribute="leading" id="tE1-Jr-GyT"/>
                             <constraint firstItem="Rsi-Ya-vuu" firstAttribute="top" secondItem="crb-lF-eSQ" secondAttribute="top" id="uWc-nn-FAN"/>
+                            <constraint firstItem="kjy-im-f2y" firstAttribute="centerX" secondItem="nNC-W5-iGT" secondAttribute="centerX" id="wei-aB-5Wp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="crb-lF-eSQ"/>
                     </view>
@@ -280,6 +308,7 @@
                     <connections>
                         <outlet property="calendar" destination="Rsi-Ya-vuu" id="2du-ER-WO5"/>
                         <outlet property="calendarHeightConstraint" destination="s25-5n-Tjr" id="HLe-W0-AOT"/>
+                        <outlet property="noResultContainer" destination="kjy-im-f2y" id="Lew-P9-B4Z"/>
                         <outlet property="tableView" destination="nNC-W5-iGT" id="Wqj-HX-vFX"/>
                         <segue destination="9Nl-mY-8UE" kind="show" identifier="editInvoice" id="hfa-iA-vHr"/>
                         <segue destination="Cdl-LG-aC3" kind="presentation" identifier="userModal" id="tKb-Eg-tuW"/>
@@ -288,6 +317,69 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7JJ-60-jFG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-722.39999999999998" y="-639.13043478260875"/>
+        </scene>
+        <!--Payment View Controller-->
+        <scene sceneID="nAg-ui-o8P">
+            <objects>
+                <viewController id="m92-ex-Iam" customClass="PaymentViewController" customModule="FinanceAPP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="T99-72-3sl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wsy-Ni-wWS">
+                                <rect key="frame" x="30" y="124" width="112" height="23.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aIY-M1-mM3">
+                                <rect key="frame" x="215" y="217.5" width="130" height="36"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="tintColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                <state key="normal" title="MAKE PAYMENT"/>
+                                <connections>
+                                    <action selector="makePayment:" destination="m92-ex-Iam" eventType="touchUpInside" id="w7n-fy-pa2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e2Q-BZ-P0m">
+                                <rect key="frame" x="127" y="217.5" width="68" height="36"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="tintColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                <state key="normal" title="CANCEL"/>
+                                <connections>
+                                    <action selector="cancel:" destination="m92-ex-Iam" eventType="touchUpInside" id="b8b-yS-1bb"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WtB-2K-Azr">
+                                <rect key="frame" x="30" y="167.5" width="315" height="30"/>
+                                <color key="backgroundColor" name="textfield_bg_color"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="19"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" keyboardAppearance="alert"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" name="main"/>
+                        <constraints>
+                            <constraint firstItem="aIY-M1-mM3" firstAttribute="trailing" secondItem="WtB-2K-Azr" secondAttribute="trailing" id="U5f-m0-Rtn"/>
+                            <constraint firstItem="wsy-Ni-wWS" firstAttribute="leading" secondItem="1VZ-qq-HK5" secondAttribute="leading" constant="30" id="Wcp-Ts-kd0"/>
+                            <constraint firstItem="aIY-M1-mM3" firstAttribute="top" secondItem="WtB-2K-Azr" secondAttribute="bottom" constant="20" id="e6X-yV-wer"/>
+                            <constraint firstItem="WtB-2K-Azr" firstAttribute="leading" secondItem="wsy-Ni-wWS" secondAttribute="leading" id="faK-3f-5uC"/>
+                            <constraint firstItem="e2Q-BZ-P0m" firstAttribute="centerY" secondItem="aIY-M1-mM3" secondAttribute="centerY" id="fzL-zG-9RD"/>
+                            <constraint firstItem="wsy-Ni-wWS" firstAttribute="top" secondItem="1VZ-qq-HK5" secondAttribute="top" constant="60" id="q7p-wg-hhS"/>
+                            <constraint firstItem="WtB-2K-Azr" firstAttribute="top" secondItem="wsy-Ni-wWS" secondAttribute="bottom" constant="20" id="s2D-0h-46w"/>
+                            <constraint firstItem="aIY-M1-mM3" firstAttribute="leading" secondItem="e2Q-BZ-P0m" secondAttribute="trailing" constant="20" id="wko-dF-SBu"/>
+                            <constraint firstItem="1VZ-qq-HK5" firstAttribute="trailing" secondItem="WtB-2K-Azr" secondAttribute="trailing" constant="30" id="yQT-77-Zoh"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1VZ-qq-HK5"/>
+                    </view>
+                    <connections>
+                        <outlet property="tfPaymentValue" destination="WtB-2K-Azr" id="uAB-m5-jli"/>
+                        <segue destination="Cdl-LG-aC3" kind="presentation" identifier="userModal" id="m7N-X6-5aY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a0P-zu-2Uo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-780" y="849"/>
         </scene>
         <!--Invoice View Controller-->
         <scene sceneID="mua-Hx-Nni">
@@ -546,6 +638,7 @@
                         <outlet property="lbValue" destination="Jm2-Z6-1A4" id="HZQ-by-Hos"/>
                         <segue destination="Cdl-LG-aC3" kind="presentation" identifier="userModal" id="xtJ-cZ-Mc6"/>
                         <segue destination="cPR-G6-Njn" kind="show" identifier="editInvoiceSelected" id="BhW-Up-982"/>
+                        <segue destination="m92-ex-Iam" kind="show" identifier="paymentSegue" id="ZdV-R5-Rsx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1lC-YX-xn5" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -801,7 +894,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VMA-9e-FDS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1570.4000000000001" y="806.44677661169419"/>
+            <point key="canvasLocation" x="-1570" y="1349"/>
         </scene>
         <!--User View Controller-->
         <scene sceneID="b19-by-fld">
@@ -1000,7 +1093,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bhL-8L-oOm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="278" y="203"/>
+            <point key="canvasLocation" x="278" y="298"/>
         </scene>
         <!--Category Table View Controller-->
         <scene sceneID="dvx-9L-XxP">
@@ -1038,7 +1131,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G7I-AN-YsP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1118" y="203"/>
+            <point key="canvasLocation" x="1118" y="939"/>
         </scene>
         <!--Starter View Controller-->
         <scene sceneID="Tw1-QR-Nee">
@@ -1870,6 +1963,7 @@
     <resources>
         <image name="bg" width="2000" height="1200"/>
         <image name="bill" width="30" height="30"/>
+        <image name="bill-table" width="128" height="128"/>
         <image name="cancel" width="30" height="30"/>
         <image name="credit_card" width="30" height="30"/>
         <image name="delete" width="20" height="20"/>
@@ -4622,9 +4716,12 @@ AAJ7RAACe1YAAntZAAJ7XgAAAAAAAAQBAAAAAAAAAEEAAAAAAAAAAAAAAAAAAntgA
         <namedColor name="textfield_bg_color">
             <color red="0.14100000262260437" green="0.14499999582767487" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="textfield_bg_color">
+            <color red="0.14100000262260437" green="0.14499999582767487" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="bnF-FO-iQP"/>
-        <segue reference="z4S-3K-aFN"/>
+        <segue reference="m7N-X6-5aY"/>
     </inferredMetricsTieBreakers>
 </document>
